Shifting gitignores and adding more config

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,2 @@
-SublimeText3/Cache
-SublimeText3/Index/**/*
-SublimeText3/Index/LOG
-SublimeText3/Local
+# Folder view configuration files
+.DS_Store
