--- a/.gitconfig
+++ b/.gitconfig
@@ -7,6 +7,7 @@
   clean = git-media-clean %f
   smudge = git-media-smudge %f
 [alias]
+  st = status
   df = diff --color --color-words --abbrev
   lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --
   co = checkout
