Correcting git email

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
   name = Ben Barnett
-  email = ben.barnett@brushfiredesign.net
+  email = ben@brushfiredesign.net
 [push]
   default = simple
 [filter "media"]
